# multicam-podcast-editor

./: .gitignore  LICENSE  README.md  analyze_video.py  args_parser.py  audio_enhancement.py  captioning.py  chat.py  collage.py  jumpcuts.py  main.py  multicam.py  orchestrate.py  pyproject.toml  requirements.txt  setup.py  short_creator.py  tprint.py  transcribe.py
src/multicam_podcast_editor/: analyze_video.py  args_parser.py  audio_enhancement.py  captioning.py  collage.py  cut_video.py  jumpcuts.py  multicam.py  orchestrate.py  short_creator.py  transcribe.py
