[project]
name = "multicam-podcast-editor"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "audalign>=1.3.1",
  "av>=14.1.0",
  "certifi>=2025.1.31",
  "charset-normalizer>=3.4.1",
  "contourpy>=1.3.1",
  "ctranslate2>=4.5.0",
  "cycler>=0.12.1",
  "demucs>=4.0.1",
  "faster-whisper>=1.1.1",
  "ffmpeg-normalize>=1.31.0",
  "ffmpeg-progress-yield>=0.11.3",
  "filelock>=3.17.0",
  "fonttools>=4.56.0",
  "fsspec>=2025.2.0",
  "h11>=0.14.0",
  "httpcore>=1.0.7",
  "httpx>=0.28.1",
  "huggingface-hub>=0.28.1",
  "idna>=3.10",
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "jinja2>=3.1.5",
  "kiwisolver>=1.4.8",
  "markupsafe>=3.0.2",
  "matplotlib>=3.8.2",
  "moviepy>=2.1.2",
  "mpmath>=1.3.0",
  "networkx>=3.4.2",
  "numpy>=1.26.4",
  "ollama>=0.4.7",
  "packaging>=24.2",
  "proglog>=0.1.10",
  "pydantic>=2.10.6",
  "pydantic-core>=2.27.2",
  "pydub>=0.25.1",
  "pyparsing>=3.2.1",
  "requests>=2.32.3",
  "scipy>=1.12.0",
  "setuptools>=59.6.0",
  "sniffio>=1.3.1",
  "sympy>=1.13.3",
  "tokenizers>=0.21.0",
  "torch",
  "torchaudio",
  "torchgen>=0.0.1",
  "torchvision",
  "tqdm>=4.66.2",
  "triton>=3.0.0",
  "urllib3>=2.3.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["multicam_podcast_editor"]
